# esl-class-boost

./: .gitignore  README.md  app-grok.py  app.py  app2.py  create-users.sh  create-virtual-environments.sh  deploy-react.sh  deploy_docker.sh  deploy_lambda.sh  deploy_react.sh  deploy_to_aws.sh  infra.txt  local_start.sh  nlp_word_extraction.py  package_lambda.sh  paragraph_extractor.py  paragraph_summarizer.py  pyproject.toml  requirements-dev.in  requirements.in  requirements.txt  set-user-password.sh  system-design.md  test_nlp_word_extraction.py  web-ui.md
backend/: Dockerfile.api  Dockerfile.paragraphs  Dockerfile.summaries  Dockerfile.vocabulary  app.py  docker-compose.localstack.yml  main.py  nlp_word_extraction.py  paragraph_summarizer.py  requirements-dev.in  requirements-services.in  requirements.in  requirements.txt  start_service.sh  test_paragraph_summarizer.py
backend/api/: Dockerfile  app.py  requirements-dev.txt  requirements.in  requirements.txt
backend/common/: setup.py
backend/common/common/: constants.py  envvar.py  s3_upload_from_sqs_notification.py  submission_repo.py  summary_repo.py  upload_notification.py  vocabulary_word_repo.py
backend/paragraphs/: Dockerfile  Dockerfile.txt  Makefile  README.md  document_ai_extract.py  envvar.py  lambda_function.py  main.py  paragraph_extractor.py  paragraphs_from_html.py  requirements-dev.txt  requirements.in  requirements.txt  sqs_client.py  tryit.py
backend/paragraphs/service/: document_ai_extract.py
backend/paragraphs/tests/: test_main.py  test_paragraph_extractor.py
backend/summaries/: Dockerfile  main.py  paragraph_summarizer.py  requirements-dev.txt  requirements.in  requirements.txt
backend/vocabulary/: Dockerfile  main.py  requirements-dev.txt  requirements.in  requirements.txt
bootstrap/: terraform-s3.tf
common/: pyproject.toml
common/common/: envvar.py  sqs_client.py  submission_repo.py  summary_repo.py  vocabulary_word_repo.py
common/tests/: test_summary_repo.py
frontend/: .env.EXAMPLE  README.md  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  App.tsx  Dashboard.test.tsx  Dashboard.tsx  SignInForm.tsx  SubmissionDetails.tsx  SubmissionForm.test.tsx  SubmissionForm.tsx  SubmissionsList.test.tsx  SubmissionsList.tsx  index.tsx  setupTests.ts  vite.config.js
frontend/src/utils/: auth.test.ts  auth.ts
infra/: cloudfront.tf  cognito.tf  fargate.tf  main.tf  outputs.tf  s3.tf  sqs.tf
infra/dev/: main.tf
infra/gcp/: create_resources.sh
services/: Dockerfile.api  Dockerfile.paragraphs  Dockerfile.summaries  Dockerfile.vocabulary  docker-compose.localstack.yml  start_service.sh
services/api/: .env.EXAMPLE  README.md  __init__.py  pyproject.toml  setup-local.sh
services/api/src/: main.py
services/paragraphs/: .env.EXAMPLE  README.md  pyproject.toml
services/paragraphs/src/: document_ai_extract.py  main.py
services/paragraphs/tests/fixtures/: Eloisa to Abelard _ The Poetry Foundation.html  the-tell-tale-heart.txt
services/summaries/: .env.EXAMPLE  pyproject.toml
services/summaries/src/: main.py  test_paragraph_summarizer.py
services/vocabulary/: .env.EXAMPLE  pyproject.toml
services/vocabulary/src/: main.py  nlp_word_extraction.py  test_nlp_word_extraction.py
terraform/: api.tf  api_gateway.tf  cloudfront.tf  cognito.tf  db.tf  dummy_lambda.py  fargate.tf  lambdas-sqs.tf  main.tf  outputs.tf  s3.tf  services.tf  sqs.tf  website.tf
terraform/dev/: apply-localstack.sh  db.tf  main.tf  sqs.tf
