[tool.poetry]
name = "english-vocabulary-tool"
version = "0.1.0"
description = "English vocabulary learning tool with microservices architecture"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.workspace]
packages = [
    "services/api",
    "services/paragraphs",
    "services/summaries",
    "services/vocabulary",
    "common/common"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
