[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "common"
version = "0.2.4"
description = "shared code for learning tool"
requires-python = ">=3.8"

dependencies = [
    "boto3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
