[tool.poetry]
name = "common"
version = "0.2.5"
description = "Shared code for English vocabulary learning tool"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "common"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.0"
