[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api"
version = "0.1.0"
description = "API service for English vocabulary tool"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "requests",
    "boto3",
    "beautifulsoup4",
    "flask",
    "flask-cors",
    "flask-cognito",
    "chardet",
    "python-dotenv",
    "common @ {root:parent:parent:uri}/common",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
