[tool.poetry]
name = "api"
version = "0.1.0"
description = "API service for English vocabulary tool"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.0"
boto3 = "^1.0"
beautifulsoup4 = "^4.0"
flask = "^2.0"
flask-cors = "^4.0"
flask-cognito = "^1.0"
chardet = "^5.0"
common = {path = "../../common", develop = true}

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0"
pytest = "^7.0"
