[tool.poetry]
name = "paragraphs"
version = "0.1.0"
description = "Paragraphs service for English vocabulary tool"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0"
requests = "^2.0"
boto3 = "^1.0"
pdfplumber = "^0.9"
python-docx = "^0.8"
openpyxl = "^3.0"
python-pptx = "^0.6"
mammoth = "^1.0"
striprtf = "^0.0"
beautifulsoup4 = "^4.0"
google-cloud-documentai = "^2.0"
common = {path = "../../common", develop = true}
