[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "summaries"
version = "0.1.0"
description = "Summaries service for English vocabulary tool"
requires-python = ">=3.8"

dependencies = [
    "openai",
    "python-dotenv",
    "common @ {root:parent:parent:uri}/common",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
