[tool.poetry]
name = "summaries"
version = "0.1.0"
description = "Summaries service for English vocabulary tool"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
openai = "^1.0"
python-dotenv = "^1.0"
common = {path = "../../common", develop = true}
