[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vocabulary"
version = "0.1.0"
description = "Vocabulary service for English vocabulary tool"
requires-python = ">=3.8"

dependencies = [
    "nltk",
    "wordfreq",
    "python-dotenv",
    "common @ {root:parent:parent:uri}/common",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
