[tool.poetry]
name = "vocabulary"
version = "0.1.0"
description = "Vocabulary service for English vocabulary tool"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
nltk = "^3.0"
wordfreq = "^3.0"
common = {path = "../../common", develop = true}

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0"
pytest = "^7.0"
